Version 0.2.1 (2021-01-23)
  * Fix incorrect passing of -version-info to libtool, causing a
    regression on versioned file name of the shared library (#140).
  * Fix time resolution on GNU/Hurd for throughput_test
  * Update AUTHORS and release manager details

Version 0.2.0 (2021-01-21)
  * API:
    * Add `src_clone()` function to clone a SRC_STATE* handle
  * Cleanup Autotools build system.
  * Require C99 compiler
  * Move `sndfile-resample` to sndfile-tools package
  * Add missing `src_get_channels`() export to windows def file
  * Fix macOS compile errors and modernize audio api on that platform
  * Add Octave scripts to generate filter coefficients
  * Fix two potential undefined behaviours
  * Fix a buffer out-of-bounds read error in src/src_sinc.c
  * Improve multichan_throughput_test
  * Replace buggy implementationg of Duffs device by regular loop
  * CMake:
    * Fix CMake generated shared library ABI compliance with Autotools build 
  * Documentation:
    * Move site to new URL: http://libsndfile.github.io/libsamplerate/
    * Convert documentation pages from HTML to Markdown
    * Use GitHub's Jekyll static site generator to generate static HTML pages
      for site

Version 0.1.9 (2016-09-23)
  * Relicense under 2 clause BSD license.
  * Minor bug fixes and upates.

Version 0.1.8 (2011-08-15)
  * Minor bug fixes and upates.

Version 0.1.7 (2009-02-14)
  * Fix a segfault which occurs when memcpy is passed a bad length parameter.
  * Fix compilation under MSVC.

Version 0.1.6 (2009-01-27)
  * Minor bug fix in test suite (account for rounding error on x86_64).

Version 0.1.5 (2009-01-11)
  * Optimisation resulting dramatic throughput improvements.

Version 0.1.4 (2008-07-02)
  * Fix bug which causes a segfault with extremely low conversion ratios.

Version 0.1.3 (2008-03-23)
  * Huge improvement to the quality of conversion with the
    SRC_SINC_MEDIUM_QUALITY and SRC_SINC_BEST_QUALITY converters.
  * Minor bug fixes.

Version 0.1.2 (2004-09-12)