@@ -1,5 +1,5 @@
 /*
-** Copyright (c) 2002-2016, Erik de Castro Lopo <erikd@mega-nerd.com>
+** Copyright (c) 2002-2021, Erik de Castro Lopo <erikd@mega-nerd.com>
 ** All rights reserved.
 **
 ** This code is released under 2-clause BSD license. Please see the
@@ -15,6 +15,18 @@
 #endif
 
 #include <math.h>
+
+#if defined (_WIN32) || defined (__CYGWIN__) || defined (__MORPHOS__)
+  #define LIBSAMPLERATE_DLL_PRIVATE
+#else
+  #if __GNUC__ >= 4 /* also works for Clang */
+    #define LIBSAMPLERATE_DLL_PRIVATE __attribute__ ((visibility ("hidden")))
+  #elif defined (__APPLE__)
+    #define LIBSAMPLERATE_DLL_PRIVATE __private_extern__
+  #else
+    #define LIBSAMPLERATE_DLL_PRIVATE
+  #endif
+#endif
 
 #define	SRC_MAX_RATIO			256
 #define	SRC_MAX_RATIO_STR		"256"
