@@ -1,3 +1,6 @@
+Unreleased
+  * Switch to GCC's visibility for hiding more implementation details
+
 Version 0.2.1 (2021-01-23)
   * Fix incorrect passing of -version-info to libtool, causing a
     regression on versioned file name of the shared library (#140).
